mostly css styling but also some ux fixing

--- a/CarRentalsAssignmentV2/Views/Admin/Dashboard.cshtml
+++ b/CarRentalsAssignmentV2/Views/Admin/Dashboard.cshtml
@@ -5,18 +5,18 @@
 <div class="">
     <h1 class="display-4">Admin Dashboard</h1>
     
-    <ul>
+    <ul class="d-flex flex-column gap-4">
 
         <li class="nav-item">
-            <a class="text-dark" asp-area="" asp-controller="Car" asp-action="Index">ManageCars</a>
+            <a class="customlink" asp-area="" asp-controller="Car" asp-action="Index">Manage Cars</a>
         </li>
 
         <li class="nav-item">
-            <a class="text-dark" asp-area="" asp-controller="Customer" asp-action="Index">ManageCustomers</a>
+            <a class="customlink" asp-area="" asp-controller="Customer" asp-action="Index">Manage Customers</a>
         </li>
 
         <li class="nav-item">
-            <a class="text-dark" asp-area="" asp-controller="Rental" asp-action="Index">Rentals</a>
+            <a class="customlink" asp-area="" asp-controller="Rental" asp-action="Index">Manage Rentals</a>
         </li>
 
 
