--- a/CarRentalsAssignmentV2/Views/Car/Details.cshtml
+++ b/CarRentalsAssignmentV2/Views/Car/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CarRentalsAssignmentV2.Models.Car
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "CarDetails";
 }
 
-<h1>Details</h1>
+<h1>Details of Car</h1>
 
 <div>
     <h4>Car</h4>
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.CarId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="customlink" asp-action="Edit" asp-route-id="@Model?.CarId">Edit</a> |
+    @* <a class="customlink" asp-action="Index">Back to List</a> *@
 </div>
