--- a/CarRentalsAssignmentV2/Views/Admin/Index.cshtml
+++ b/CarRentalsAssignmentV2/Views/Admin/Index.cshtml
@@ -4,18 +4,18 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login</h1>
+<h1>Admin Login (index)</h1>
 
 <h4>Admin</h4>
-<hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="AdminName" class="control-label"></label>
+                <input asp-for="AdminName" class="form-control" />
+                <span asp-validation-for="AdminName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
@@ -23,17 +23,17 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-primary" />
+                <input type="submit" value="Login" class="btn btn-secondary my-3" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <hr />
+@* <div> *@
+@*     <hr /> *@
 
-    <a asp-action="Index">Back to List</a>
-</div>
+@*     <a class="customlink" asp-action="Index">Back to List</a> *@
+@* </div> *@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
