--- a/CarRentalsAssignmentV2/Views/Car/Create.cshtml
+++ b/CarRentalsAssignmentV2/Views/Car/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create Car</h1>
 
 <h4>Car</h4>
 <hr />
@@ -44,16 +44,16 @@
                 <img id="imagePreview3" src="" alt="Selected Image 3" style="max-width: 100px; margin-left: 10px; display: none;" />
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-secondary my-3" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <hr />
-    <a asp-action="Index">Back to List</a>
-</div>
+@* <div> *@
+@*     <hr /> *@
+@*     <a class="customlink" asp-action="Index">Back to List</a> *@
+@* </div> *@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
