--- a/CarRentalsAssignmentV2/Views/Car/Delete.cshtml
+++ b/CarRentalsAssignmentV2/Views/Car/Delete.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CarRentalsAssignmentV2.Models.Car
 
 @{
-    ViewData["Title"] = "Cars";
+    ViewData["Title"] = "DeleteCar";
 }
 
-<h1>Cars</h1>
+<h1>Delete Car</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -27,7 +27,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="CarId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger my-3" /> |
+        @* <a class="customlink" asp-action="Index">Back to List</a> *@
     </form>
 </div>
