--- a/CarRentalsAssignmentV2/Views/Car/Edit.cshtml
+++ b/CarRentalsAssignmentV2/Views/Car/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CarRentalsAssignmentV2.Models.Car
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "EditCar";
 }
 
-<h1>Edit</h1>
+<h1>Edit Car</h1>
 
 <h4>Car</h4>
 <hr />
@@ -46,15 +46,15 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-secondary my-3" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+@* <div> *@
+@*     <a class="customlink" asp-action="Index">Back to List</a> *@
+@* </div> *@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
