--- a/CarRentalsAssignmentV2/Views/Customer/Create.cshtml
+++ b/CarRentalsAssignmentV2/Views/Customer/Create.cshtml
@@ -28,15 +28,15 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-secondary my-3" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+@* <div> *@
+@*     <a class="customlink" asp-action="Index">Back to List</a> *@
+@* </div> *@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
