--- a/CarRentalsAssignmentV2/Views/Customer/Index.cshtml
+++ b/CarRentalsAssignmentV2/Views/Customer/Index.cshtml
@@ -4,10 +4,10 @@
 	ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>List of Customers</h1>
 
 <p>
-	<a asp-action="Create">Create New</a>
+	<a class="customlink" asp-action="Create">Create New Customer</a>
 </p>
 <table class="table">
 	<thead>
@@ -44,9 +44,9 @@
 					@Html.DisplayFor(modelItem => item.Email)
 				</td>
 				<td>
-					<a asp-action="Edit" asp-route-id="@item.CustomerId">Edit</a> |
-					<a asp-action="Details" asp-route-id="@item.CustomerId">Details</a> |
-					<a asp-action="Delete" asp-route-id="@item.CustomerId">Delete</a>
+					<a class="customlink" asp-action="Edit" asp-route-id="@item.CustomerId">Edit</a> |
+					<a class="customlink" asp-action="Details" asp-route-id="@item.CustomerId">Details</a> |
+					<a class="customlink" asp-action="Delete" asp-route-id="@item.CustomerId">Delete</a>
 				</td>
 			</tr>
 		}
