--- a/CarRentalsAssignmentV2/Views/Home/Index.cshtml
+++ b/CarRentalsAssignmentV2/Views/Home/Index.cshtml
@@ -3,8 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to</h1>
+    
     <img src="/images/friberg_rentals_logo.png" style="height:400px;" alt="Alternate Text" />
 
-    <p class="lead">Welcome to the cool garage! Create a booking and we discuss pricing aftewards!</p>
+    <p class="display-5">Welcome to <span class="fst-italic">The Cool Garage</span></p>
+    <p>Find your dream car, select your rental period and we'll be in contact to discuss the details!</p>
 </div>
