--- a/CarRentalsAssignmentV2/Views/Home/SignupOrLogin.cshtml
+++ b/CarRentalsAssignmentV2/Views/Home/SignupOrLogin.cshtml
@@ -20,7 +20,7 @@
 <div class="row">
 
 	<div class="col-sm">
-		<h2>Login to existing Customer</h2>
+		<h3>Login to existing Customer</h3>
 		<form asp-controller="Customer" asp-action="Login">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<div class="form-group">
@@ -38,12 +38,12 @@
 				<input type="hidden" value="Customer" asp-for="Role" class="form-control" />
 			</div>
 			<div class="form-group">
-				<input type="submit" value="Login" class="btn btn-primary" />
+				<input type="submit" value="Login" class="btn btn-secondary my-3" />
 			</div>
 		</form>
 	</div>
 	<div class="col-sm">
-		<h2>Create New Account</h2>
+		<h3>Create New Account</h3>
 		<form asp-controller="Customer" asp-action="Create">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<div class="form-group">
@@ -66,15 +66,15 @@
 				<input type="hidden" value="Customer" asp-for="Role" class="form-control" />
 			</div>
 			<div class="form-group">
-				<input type="submit" value="Create New Account" class="btn btn-primary" />
+				<input type="submit" value="Create New Account" class="btn btn-secondary my-3" />
 			</div>
 		</form>
 	</div>
 </div>
 
-<div>
-	<a asp-action="Index">Back to List</a>
-</div>
+@* <div> *@
+@* 	<a class="customlink" asp-action="Index">Back to List</a> *@
+@* </div> *@
 
 @section Scripts {
 	@{
