--- a/CarRentalsAssignmentV2/Views/Rental/Create.cshtml
+++ b/CarRentalsAssignmentV2/Views/Rental/Create.cshtml
@@ -1,39 +1,60 @@
 ﻿@model CarRentalsAssignmentV2.Models.Rental
+@* @model CarRentalsAssignmentV2.ViewModels.CarDetailsViewModel *@
 
 @{
-    ViewData["Title"] = "Create";
+	ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create Rental</h1>
 
-<h4>Rental</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="StartDate" class="control-label"></label>
-                <input type="date" asp-for="StartDate" class="form-control" />
-                <span asp-validation-for="StartDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EndDate" class="control-label"></label>
-                <input type="date" asp-for="EndDate" class="form-control" />
-                <span asp-validation-for="EndDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+<div class="row d-flex flex-column gap-4">
+	<div>
+		<h4>Rental of "@ViewBag.Car.Name"</h4>
+		<div class="d-flex flex-wrap">
+			@foreach (var item in ViewBag.Car.ImageFilenames)
+			{
+				<img class="object-fit-cover" style="width:160px; height:100px;" src="~/images/cars/@item" />
+			}
+		</div>
+	</div>
+
+	<div>
+		<h4>Currently booked rentalperiods:</h4>
+		<ul>
+			@foreach (var item in ViewBag.Rentals)
+			{
+				<li>@item.StartDate to @item.EndDate</li>
+			}
+		</ul>
+	</div>
+
+	<div class="col-md-4">
+		<form asp-action="Create">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label asp-for="StartDate" class="control-label"></label>
+				<input type="date" asp-for="StartDate" class="form-control" />
+				<span asp-validation-for="StartDate" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="EndDate" class="control-label"></label>
+				<input type="date" asp-for="EndDate" class="form-control" />
+				<span asp-validation-for="EndDate" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Create" class="btn btn-secondary my-3" />
+			</div>
+		</form>
+	</div>
 </div>
 
-<div>
-    <hr />
-    <a asp-action="Index">Back to List</a>
-</div>
+@* <div> *@
+@*     <hr /> *@
+@*     <a class="customlink" asp-action="Index">Back to List</a> *@
+@* </div> *@
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+	@{
+		await Html.RenderPartialAsync("_ValidationScriptsPartial");
+	}
 }
