--- a/CarRentalsAssignmentV2/Views/Rental/Delete.cshtml
+++ b/CarRentalsAssignmentV2/Views/Rental/Delete.cshtml
@@ -39,7 +39,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="RentalId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger my-3" /> |
+        @* <a class="customlink" asp-action="Index">Back to List</a> *@
     </form>
 </div>
