--- a/CarRentalsAssignmentV2/Views/Shared/_Layout.cshtml
+++ b/CarRentalsAssignmentV2/Views/Shared/_Layout.cshtml
@@ -4,7 +4,6 @@
 	var isAdmin = Context.Session.GetString("UserRole") == "Admin";
 	var isGuest = Context.Session.GetString("UserRole") == "Guest";
 	var isCustomer = Context.Session.GetString("UserRole") == "Customer";
-
 }
 
 <!DOCTYPE html>
@@ -17,6 +16,11 @@
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/CarRentalsAssignmentV2.styles.css" asp-append-version="true" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<style>
+		.customlink {
+		color: #f79a1b;
+		}
+	</style>
 </head>
 <body >
 	<header>
@@ -28,24 +32,25 @@
 					Friberg Car Rentals
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-						aria-expanded="false" aria-label="Toggle navigation">
+				aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-					<ul class="navbar-nav flex-grow-1">
+					<ul class="navbar-nav flex-grow-1">												
+						@* default: nav-link text-dark *@						
+
 						<li class="nav-item">
-							<a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-							@* nav-link text-dark *@
+							<a class="nav-link" asp-area="" asp-controller="Car" asp-action="Index">View Cars</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" asp-area="" asp-controller="Car" asp-action="Index">View/Rent Cars</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" asp-area="" asp-controller="Home" asp-action="SignupOrLogin">Register/Login</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
-						</li>
+
+						@if (!isAdmin && !isCustomer)
+						{
+						
+							<li class="nav-item">
+								<a class="nav-link" asp-area="" asp-controller="Home" asp-action="SignupOrLogin">Login</a>
+							</li>
+
+						}
 
 						@if (isAdmin)
 						{
@@ -57,7 +62,7 @@
 								<a class="nav-link " asp-area="" asp-controller="Rental" asp-action="Index">ListRentals</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link " asp-area="" asp-controller="Admin" asp-action="Index">AdminDashboard</a>
+								<a class="nav-link " asp-area="" asp-controller="Admin" asp-action="Dashboard">AdminDashboard</a>
 							</li>
 						}
 
@@ -71,7 +76,20 @@
 
 					</ul>
 					<ul class="navbar-nav flex-grow-1 justify-content-end d-none d-md-flex me-0 me-lg-5">
-						<li class="nav-item d-flex align-items-center gap-4" style="color:#101f22; font-size:10px;">
+						@if (!isAdmin)
+						{
+							<li class="nav-item mx-4">
+								<a class="nav-link" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
+							</li>
+						}
+						@if (isAdmin || isCustomer)
+						{
+							<li class="nav-item mx-4">
+								<a class="nav-link" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
+							</li>
+						}
+
+						<li class="nav-item d-flex align-items-center gap-4" style="font-size:10px;">
 							<div class="d-flex flex-column text-center">
 								CurrentUser:<span class="fw-normal" style="color:orange; font-size:16px;">@Context.Session.GetString("UserName")</span>
 							</div>
@@ -97,7 +115,7 @@
 	</div>
 
 	<footer class="border-top footer text-muted">
-		<div class="container">
+		<div class="container text-center">
 			&copy; 2025 - Friberg Car Rentals</a>
 		</div>
 	</footer>
